--- a/Labyrinth 1st/Labyrinth/Assembly-CSharp.csproj
+++ b/Labyrinth 1st/Labyrinth/Assembly-CSharp.csproj
@@ -67,35 +67,37 @@
     <Compile Include="Assets\Scripts\Enemy\EnemyRaycast.cs" />
     <Compile Include="Assets\Scripts\Enemy\EnemyStates.cs" />
     <Compile Include="Assets\Scripts\Enemy\PatrolBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Player\Coins.cs" />
     <Compile Include="Assets\Scripts\Player\DistractionItem.cs" />
     <Compile Include="Assets\Scripts\Player\KeyboardController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerInventory.cs" />
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth/Labyrinth/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
+      <HintPath>C:/Users/44746/Desktop/Game tech/Labyrinth-Protorype/Labyrinth 1st/Labyrinth/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>C:/Program Files/Unity/Hub/Editor/2018.4.9f1/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
